[package]
name = "hookshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
serde = "1.0.189"
url = "2.4.1"

[dev-dependencies]
cucumber = "0.20.2"
futures = "0.3.30"
spectral = "0.6.0"
