[package]
name = "hookshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
serde = { version = "1.0.189", features = ["derive"]}
url = "2.4.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0.113"
google-youtube3 = "5.0.3"

[dev-dependencies]
cucumber = "0.20.2"
futures = "0.3.30"
spectral = "0.6.0"
mockito = "1.2.0"

[[test]]
name = "lib"
harness = false
